commit al master del blogpost en su version mas reciente

--- a/historia.html
+++ b/historia.html
@@ -2,9 +2,14 @@
     <meta>
         <meta charset="utf-8" />
         <title>Historia Shine</title>
+        <link rel="stylesheet" href="/PLATZI/Curso Git/proyecto1/css/estilos.css" />
     </head>
     <body>
-        <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
-        <p>Al inicio existia polvo y oscuridad</p>
+        <div id="container">
+            <div id="post">
+                    <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
+                    <p>Al inicio existia polvo y oscuridad, pero de la nada aparecio shine y carreo como nunca antes habia carreado</p>
+            </div>
+        </div>
     </body>
 </html>
