--- a/historia.html
+++ b/historia.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
                     <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
                     <p>Al inicio existia polvo y oscuridad, pero de la nada aparecio shine y carreo como nunca antes habia carreado</p>
