--- a/historia.html
+++ b/historia.html
@@ -7,7 +7,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                cabecera
+                Hyperblog
+                <span id="tagline">El blog mas gamer</span>
             </div>
             <div id="post">
                     <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
