segundo parrafo y cambio de font

--- a/historia.html
+++ b/historia.html
@@ -8,7 +8,12 @@
         <div id="container">
             <div id="post">
                     <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
-                    <p>Al inicio existia polvo y oscuridad, pero de la nada aparecio shine y carreo como nunca antes habia carreado</p>
+                    <p>Al inicio existia polvo y oscuridad, pero de la nada aparecio shine y
+                    carreo como nunca antes habia carreado</p>
+                    <p>
+                    DarkShine es un gamer semiprofesional que gusta de todos los tipos de
+                    juegos en el mundo.
+                    </p>
             </div>
         </div>
     </body>
