modificacion color body y cabecera

--- a/historia.html
+++ b/historia.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">El blog mas gamer</span>
+                <span id="tagline">El blog mas gaymememer</span>
             </div>
             <div id="post">
                     <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
