modificacion color body, cabecera y nuevo parrafo

--- a/historia.html
+++ b/historia.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">El blog mas gamer</span>
+                <span id="tagline">El blog mas gaymer</span>
             </div>
             <div id="post">
                     <h1>Corrian tiempos oscuros, pero llego SHINE</h1>
@@ -17,6 +17,9 @@
                     <p>
                     DarkShine es un gamer semiprofesional que gusta de todos los tipos de
                     juegos en el mundo.
+                    </p>
+                    <p>
+                        regalenme mas jueguitos plox
                     </p>
             </div>
         </div>
