una version de el hyperblog

--- a/historia.html
+++ b/historia.html
@@ -1,7 +1,7 @@
 <html>
     <meta>
         <meta charset="utf-8" />
-        <title>Historia Shine, bienvenido</title>
+        <title>Historia Shine, bienvenido 2.0</title>
         <link rel="stylesheet" href="/PLATZI/Curso Git/proyecto1/css/estilos.css" />
     </head>
     <body>
