--- a/historia.html
+++ b/historia.html
@@ -7,6 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/Gaming.png" />
                 Hyperblog
                 <span id="tagline">El blog mas gaymememer</span>
             </div>
