nuevo pie de pagina

--- a/historia.html
+++ b/historia.html
@@ -22,6 +22,9 @@
                         regalenme mas jueguitos plox
                     </p>
             </div>
+            <div id="footer">
+                En la vida de shinuru 💖
+            </div>
         </div>
     </body>
 </html>
