agregue una imagen, cambio en la URL

--- a/historia.html
+++ b/historia.html
@@ -19,7 +19,7 @@
                     DarkShine es un gamer semiprofesional que gusta de todos los tipos de
                     juegos en el mundo.
                     </p>
-                    <img src="/PLATZI/Curso Git/proyecto1/imagenes/peligro_zona_gamer.jpg" width="100%"/>
+                    <img src="https://servisistemas.com.co/informatica-y-tecnologia/img/cms/Empresas/peligro_zona_gamer.jpg" width="100%"/>
                     <p>
                         regalenme mas jueguitos plox
                     </p>
